--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
 
 script:
   - yamllint --help
-  - yamllint -d "{extends: default, rules: {line-length: {max: 120}}}" ./data
+  - "yamllint -d \"{extends: default, rules: {line-length: {max: 120}}}\" ./data"
   - yamllint ./validate/schema.yaml
   - python ./validate/validate.py
